--- a/src/components/AddTAForm/AddTAForm.css
+++ b/src/components/AddTAForm/AddTAForm.css
@@ -1,11 +1,97 @@
-.addTA {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: white;
+@media screen and (max-width: 460px) {
+  .addTA {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    font-family: Josefin Sans;
+    margin-top: 4rem;
+  }
+
+  #items {
+    min-height: 98px;
+    min-width: 12rem;
+    border: .12rem solid black;
+    border-radius: 1rem;
+  }
+
+  #vendorName, #fullPrice {
+    width: 12rem;
+    height: 3rem;
+    border: .12rem solid black;
+    border-radius: 1rem;
+  }
+
+  #submit-ta, #cancel-ta {
+    height: 3rem;
+    border-radius: 1rem;
+    width: 8rem;
+    margin-bottom: 1rem;
+  }
+
+  #submit-ta {
+    border-style: none;
+  }
+
+  #cancel-ta {
+    border-style: none;
+  }
+
+  .form-btn-container {
+    margin: 2rem;
+    display: flex;
+    flex-direction: column;
+}
 }
 
-#items {
-  min-height: 98px;
-  min-width: 174px;
+@media screen and (min-width: 461px) {
+    .addTA {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: white;
+      font-family: Josefin Sans;
+      margin-top: 4rem;
+    }
+  
+    #items {
+      min-height: 98px;
+      min-width: 26rem;
+      border: .12rem solid black;
+      border-radius: 1rem;
+    }
+  
+    #vendorName, #fullPrice {
+      width: 26rem;
+      height: 3rem;
+      border: .12rem solid black;
+      border-radius: 1rem;
+    }
+  
+    #submit-ta, #cancel-ta {
+      height: 3rem;
+      width: 8rem;
+      font-family: Josefin Sans;
+      font-weight: bold;
+    }
+  
+    #submit-ta {
+      border-style: none;
+      border-radius: 1rem 0 0 1rem;
+    }
+  
+    #cancel-ta {
+      border-style: none none none outset;
+      border-radius: 0 1rem 1rem 0;
+    }
+  
+    .form-btn-container {
+      margin: 2rem;
+      display: flex;
+      flex-direction: row;
+  }
+}
+
+#vendorName, #fullPrice, #items {
+  margin: 1rem;
 }
