--- a/src/components/AddTAForm/AddTAForm.css
+++ b/src/components/AddTAForm/AddTAForm.css
@@ -1,3 +1,9 @@
+#addTA-legend {
+  margin-bottom: 29px;
+  color: #cbff8c;
+  font-size: 1.5rem;
+}
+
 @media screen and (max-width: 460px) {
   .addTA {
     display: flex;
