--- a/src/components/SignIn/SignIn.css
+++ b/src/components/SignIn/SignIn.css
@@ -2,6 +2,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 65px 0px 19px 0px;
+}
+
+.body-content, .login-cred {
+  font-family: Josefin Sans;
 }
 
 .login-cred {
@@ -14,4 +19,21 @@
 .body-content {
   background-color: #34252F;
   color: #BEC5AD;
+}
+
+#email, #password {
+  width: 16rem;
+  height: 3rem;
+  border: .12rem solid black;
+  border-radius: 1rem; 
+}
+
+#login-btn {
+  height: 2rem;
+  border-radius: .5rem;
+  width: 8rem;
+  margin-bottom: 1rem;
+  border-style: none;
+  font-weight: bold;
+  margin-top: 25px;
 }
