--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,7 +11,7 @@
   .background-img > img {
     max-width: 100%;
     height: auto;
-    border-radius: 2.5rem;
+    border-radius: 0 0 2.5rem 2.5rem;
   }
 
   .header-content {
@@ -63,7 +63,7 @@
   .background-img > img {
     max-width: 100%;
     height: auto;
-    border-radius: 2.5rem;
+    border-radius: 0 0 1.5rem 1.5rem;
   }
 
   .header-content {
@@ -116,7 +116,7 @@
   .background-img > img {
     max-width: 100%;
     height: auto;
-    border-radius: 2.5rem;
+    border-radius: 0 0 2.5rem 2.5rem;
   }
 
   .header-content {
