--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -12,12 +12,26 @@
     list-style-type: circle;
   }
 
+  #control-btns {
+    display: flex;
+    flex-direction: row;
+  }
+
   #back-btn {
     height: 3rem;
-    border-radius: 1rem;
+    border-radius: 1rem 0 0 1rem ; 
     width: 8rem;
     margin-bottom: 1rem;
     border-style: none;
+    font-weight: bold;
+  }
+
+  #delete-btn {
+    height: 3rem;
+    border-radius: 0 1rem 1rem 0 ;
+    border-style: none none none outset;
+    width: 8rem;
+    margin-bottom: 1rem;
     font-weight: bold;
   }
 
